merged branch/solarplexus/openuss-plexus from revision 1247:2576 to trunk
git-svn-id: https://svn.code.sf.net/p/openuss/code/trunk@2577 60046477-0c10-0410-bf4b-e552a4ff1768